--- a/source/_themes/sphinx_rtd_theme/static/css/theme.css
+++ b/source/_themes/sphinx_rtd_theme/static/css/theme.css
@@ -30,6 +30,8 @@ mark { background: #ffff00; color: #000000; font-style: italic; font-weight: bol
 
 pre, code, .rst-content tt, kbd, samp { font-family: monospace, serif; _font-family: "courier new", monospace; font-size: 1em }
 
+.rst-content { max-width: 65em; }
+
 pre { white-space: pre }
 
 q { quotes: none }
