[UG] Fix border color of the search input (more subtile)

--- a/source/_themes/sphinx_rtd_theme/static/css/citheme.css
+++ b/source/_themes/sphinx_rtd_theme/static/css/citheme.css
@@ -76,6 +76,10 @@ div#pulldown-menu {
 	color: #ffffff;
 }
 
+.wy-side-nav-search input[type=text] {
+	border-color: #dd4815;
+}
+
 .wy-nav-top {
 	background-color: #dd4814;
 }
