--- a/source/_themes/sphinx_rtd_theme/static/css/citheme.css
+++ b/source/_themes/sphinx_rtd_theme/static/css/citheme.css
@@ -174,6 +174,10 @@ div#pulldown-menu {
 		margin-top: -0.5rem;
 }
 
+.rst-content dl:not(.docutils) dt:first-child {
+		margin-top: 1rem;
+}
+
 /* Footer ------------------------------------------------------------------- */
 
 .rst-footer-buttons {
