[RTD Theme] Fix ordered lists style + Fix CSS indentation

--- a/source/_themes/sphinx_rtd_theme/static/css/citheme.css
+++ b/source/_themes/sphinx_rtd_theme/static/css/citheme.css
@@ -149,18 +149,18 @@ div#pulldown-menu {
 }
 
 .wy-alert.wy-alert-success, .rst-content .wy-alert-success.note, .rst-content .wy-alert-success.attention, .rst-content .wy-alert-success.caution, .rst-content .wy-alert-success.danger, .rst-content .wy-alert-success.error, .rst-content .hint, .rst-content .important, .rst-content .tip, .rst-content .wy-alert-success.warning, .rst-content .wy-alert-success.seealso, .rst-content .wy-alert-success.admonition-todo {
-		background: rgba(0,0,0,0.05);
+	background: rgba(0,0,0,0.05);
 }
 
 /* override table width restrictions */
 .wy-table-responsive table td, .wy-table-responsive table th {
-		white-space: normal;
+	white-space: normal;
 }
 
 .wy-table-responsive {
-		margin-bottom: 24px;
-		max-width: 100%;
-		overflow: visible;
+	margin-bottom: 24px;
+	max-width: 100%;
+	overflow: visible;
 }
 
 .rst-content dl:not(.docutils) dt {
@@ -169,13 +169,12 @@ div#pulldown-menu {
 	border-top: solid 3px #dd4814;
 }
 
-.wy-plain-list-disc li ul, .rst-content .section ul li ul, .rst-content .toctree-wrapper ul li ul, article ul li ul {
-		margin-bottom: 0.5rem;
-		margin-top: -0.5rem;
+.rst-content .section ol p, .rst-content .section ul p {
+	margin: 0;
 }
 
 .rst-content dl:not(.docutils) dt:first-child {
-		margin-top: 1rem;
+	margin-top: 1rem;
 }
 
 /* Footer ------------------------------------------------------------------- */
