--- a/source/_themes/sphinx_rtd_theme/static/css/citheme.css
+++ b/source/_themes/sphinx_rtd_theme/static/css/citheme.css
@@ -1,4 +1,13 @@
+/* Imports ------------------------------------------------------------------ */
+
+@import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
 @import 'theme.css';
+
+/* General ------------------------------------------------------------------ */
+
+body, h1, h2, h3, h4, h5, h6, p, legend {
+	font-family: "Raleway",-apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+}
 
 /* Titles ------------------------------------------------------------------- */
 
