--- a/source/_themes/sphinx_rtd_theme/static/css/citheme.css
+++ b/source/_themes/sphinx_rtd_theme/static/css/citheme.css
@@ -1,7 +1,85 @@
 /* Imports ------------------------------------------------------------------ */
 
-@import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
 @import 'theme.css';
+
+/* raleway-200 - latin */
+@font-face {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 200;
+  src: url('../fonts/Raleway/raleway-v14-latin-200.eot'); /* IE9 Compat Modes */
+  src: local('Raleway ExtraLight'), local('Raleway-ExtraLight'),
+       url('../fonts/Raleway/raleway-v14-latin-200.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/Raleway/raleway-v14-latin-200.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/Raleway/raleway-v14-latin-200.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/Raleway/raleway-v14-latin-200.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/Raleway/raleway-v14-latin-200.svg#Raleway') format('svg'); /* Legacy iOS */
+}
+/* raleway-200italic - latin */
+@font-face {
+  font-family: 'Raleway';
+  font-style: italic;
+  font-weight: 200;
+  src: url('../fonts/Raleway/raleway-v14-latin-200italic.eot'); /* IE9 Compat Modes */
+  src: local('Raleway ExtraLight Italic'), local('Raleway-ExtraLightItalic'),
+       url('../fonts/Raleway/raleway-v14-latin-200italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/Raleway/raleway-v14-latin-200italic.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/Raleway/raleway-v14-latin-200italic.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/Raleway/raleway-v14-latin-200italic.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/Raleway/raleway-v14-latin-200italic.svg#Raleway') format('svg'); /* Legacy iOS */
+}
+/* raleway-regular - latin */
+@font-face {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/Raleway/raleway-v14-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Raleway'), local('Raleway-Regular'),
+       url('../fonts/Raleway/raleway-v14-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/Raleway/raleway-v14-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/Raleway/raleway-v14-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/Raleway/raleway-v14-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/Raleway/raleway-v14-latin-regular.svg#Raleway') format('svg'); /* Legacy iOS */
+}
+/* raleway-italic - latin */
+@font-face {
+  font-family: 'Raleway';
+  font-style: italic;
+  font-weight: 400;
+  src: url('../fonts/Raleway/raleway-v14-latin-italic.eot'); /* IE9 Compat Modes */
+  src: local('Raleway Italic'), local('Raleway-Italic'),
+       url('../fonts/Raleway/raleway-v14-latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/Raleway/raleway-v14-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/Raleway/raleway-v14-latin-italic.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/Raleway/raleway-v14-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/Raleway/raleway-v14-latin-italic.svg#Raleway') format('svg'); /* Legacy iOS */
+}
+/* raleway-700 - latin */
+@font-face {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../fonts/Raleway/raleway-v14-latin-700.eot'); /* IE9 Compat Modes */
+  src: local('Raleway Bold'), local('Raleway-Bold'),
+       url('../fonts/Raleway/raleway-v14-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/Raleway/raleway-v14-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/Raleway/raleway-v14-latin-700.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/Raleway/raleway-v14-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/Raleway/raleway-v14-latin-700.svg#Raleway') format('svg'); /* Legacy iOS */
+}
+/* raleway-700italic - latin */
+@font-face {
+  font-family: 'Raleway';
+  font-style: italic;
+  font-weight: 700;
+  src: url('../fonts/Raleway/raleway-v14-latin-700italic.eot'); /* IE9 Compat Modes */
+  src: local('Raleway Bold Italic'), local('Raleway-BoldItalic'),
+       url('../fonts/Raleway/raleway-v14-latin-700italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/Raleway/raleway-v14-latin-700italic.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/Raleway/raleway-v14-latin-700italic.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/Raleway/raleway-v14-latin-700italic.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/Raleway/raleway-v14-latin-700italic.svg#Raleway') format('svg'); /* Legacy iOS */
+}
 
 /* General ------------------------------------------------------------------ */
 
