--- a/source/_themes/sphinx_rtd_theme/static/css/citheme.css
+++ b/source/_themes/sphinx_rtd_theme/static/css/citheme.css
@@ -4,76 +4,76 @@
 
 /* Raleway */
 @font-face {
-  font-family: 'Raleway';
-  font-style: normal;
-  font-weight: 200;
-  src: url('../fonts/Raleway/raleway-v14-latin-200.eot'); /* IE9 Compat Modes */
-  src: local('Raleway ExtraLight'), local('Raleway-ExtraLight'),
-       url('../fonts/Raleway/raleway-v14-latin-200.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/Raleway/raleway-v14-latin-200.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/Raleway/raleway-v14-latin-200.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/Raleway/raleway-v14-latin-200.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/Raleway/raleway-v14-latin-200.svg#Raleway') format('svg'); /* Legacy iOS */
+	font-family: 'Raleway';
+	font-style: normal;
+	font-weight: 200;
+	src: url('../fonts/Raleway/raleway-v14-latin-200.eot'); /* IE9 Compat Modes */
+	src: local('Raleway ExtraLight'), local('Raleway-ExtraLight'),
+			 url('../fonts/Raleway/raleway-v14-latin-200.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+			 url('../fonts/Raleway/raleway-v14-latin-200.woff2') format('woff2'), /* Super Modern Browsers */
+			 url('../fonts/Raleway/raleway-v14-latin-200.woff') format('woff'), /* Modern Browsers */
+			 url('../fonts/Raleway/raleway-v14-latin-200.ttf') format('truetype'), /* Safari, Android, iOS */
+			 url('../fonts/Raleway/raleway-v14-latin-200.svg#Raleway') format('svg'); /* Legacy iOS */
 }
 @font-face {
-  font-family: 'Raleway';
-  font-style: italic;
-  font-weight: 200;
-  src: url('../fonts/Raleway/raleway-v14-latin-200italic.eot'); /* IE9 Compat Modes */
-  src: local('Raleway ExtraLight Italic'), local('Raleway-ExtraLightItalic'),
-       url('../fonts/Raleway/raleway-v14-latin-200italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/Raleway/raleway-v14-latin-200italic.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/Raleway/raleway-v14-latin-200italic.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/Raleway/raleway-v14-latin-200italic.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/Raleway/raleway-v14-latin-200italic.svg#Raleway') format('svg'); /* Legacy iOS */
+	font-family: 'Raleway';
+	font-style: italic;
+	font-weight: 200;
+	src: url('../fonts/Raleway/raleway-v14-latin-200italic.eot'); /* IE9 Compat Modes */
+	src: local('Raleway ExtraLight Italic'), local('Raleway-ExtraLightItalic'),
+			 url('../fonts/Raleway/raleway-v14-latin-200italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+			 url('../fonts/Raleway/raleway-v14-latin-200italic.woff2') format('woff2'), /* Super Modern Browsers */
+			 url('../fonts/Raleway/raleway-v14-latin-200italic.woff') format('woff'), /* Modern Browsers */
+			 url('../fonts/Raleway/raleway-v14-latin-200italic.ttf') format('truetype'), /* Safari, Android, iOS */
+			 url('../fonts/Raleway/raleway-v14-latin-200italic.svg#Raleway') format('svg'); /* Legacy iOS */
 }
 @font-face {
-  font-family: 'Raleway';
-  font-style: normal;
-  font-weight: 400;
-  src: url('../fonts/Raleway/raleway-v14-latin-regular.eot'); /* IE9 Compat Modes */
-  src: local('Raleway'), local('Raleway-Regular'),
-       url('../fonts/Raleway/raleway-v14-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/Raleway/raleway-v14-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/Raleway/raleway-v14-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/Raleway/raleway-v14-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/Raleway/raleway-v14-latin-regular.svg#Raleway') format('svg'); /* Legacy iOS */
+	font-family: 'Raleway';
+	font-style: normal;
+	font-weight: 400;
+	src: url('../fonts/Raleway/raleway-v14-latin-regular.eot'); /* IE9 Compat Modes */
+	src: local('Raleway'), local('Raleway-Regular'),
+			 url('../fonts/Raleway/raleway-v14-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+			 url('../fonts/Raleway/raleway-v14-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+			 url('../fonts/Raleway/raleway-v14-latin-regular.woff') format('woff'), /* Modern Browsers */
+			 url('../fonts/Raleway/raleway-v14-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+			 url('../fonts/Raleway/raleway-v14-latin-regular.svg#Raleway') format('svg'); /* Legacy iOS */
 }
 @font-face {
-  font-family: 'Raleway';
-  font-style: italic;
-  font-weight: 400;
-  src: url('../fonts/Raleway/raleway-v14-latin-italic.eot'); /* IE9 Compat Modes */
-  src: local('Raleway Italic'), local('Raleway-Italic'),
-       url('../fonts/Raleway/raleway-v14-latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/Raleway/raleway-v14-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/Raleway/raleway-v14-latin-italic.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/Raleway/raleway-v14-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/Raleway/raleway-v14-latin-italic.svg#Raleway') format('svg'); /* Legacy iOS */
+	font-family: 'Raleway';
+	font-style: italic;
+	font-weight: 400;
+	src: url('../fonts/Raleway/raleway-v14-latin-italic.eot'); /* IE9 Compat Modes */
+	src: local('Raleway Italic'), local('Raleway-Italic'),
+			 url('../fonts/Raleway/raleway-v14-latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+			 url('../fonts/Raleway/raleway-v14-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
+			 url('../fonts/Raleway/raleway-v14-latin-italic.woff') format('woff'), /* Modern Browsers */
+			 url('../fonts/Raleway/raleway-v14-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
+			 url('../fonts/Raleway/raleway-v14-latin-italic.svg#Raleway') format('svg'); /* Legacy iOS */
 }
 @font-face {
-  font-family: 'Raleway';
-  font-style: normal;
-  font-weight: 700;
-  src: url('../fonts/Raleway/raleway-v14-latin-700.eot'); /* IE9 Compat Modes */
-  src: local('Raleway Bold'), local('Raleway-Bold'),
-       url('../fonts/Raleway/raleway-v14-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/Raleway/raleway-v14-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/Raleway/raleway-v14-latin-700.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/Raleway/raleway-v14-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/Raleway/raleway-v14-latin-700.svg#Raleway') format('svg'); /* Legacy iOS */
+	font-family: 'Raleway';
+	font-style: normal;
+	font-weight: 700;
+	src: url('../fonts/Raleway/raleway-v14-latin-700.eot'); /* IE9 Compat Modes */
+	src: local('Raleway Bold'), local('Raleway-Bold'),
+			 url('../fonts/Raleway/raleway-v14-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+			 url('../fonts/Raleway/raleway-v14-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+			 url('../fonts/Raleway/raleway-v14-latin-700.woff') format('woff'), /* Modern Browsers */
+			 url('../fonts/Raleway/raleway-v14-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+			 url('../fonts/Raleway/raleway-v14-latin-700.svg#Raleway') format('svg'); /* Legacy iOS */
 }
 @font-face {
-  font-family: 'Raleway';
-  font-style: italic;
-  font-weight: 700;
-  src: url('../fonts/Raleway/raleway-v14-latin-700italic.eot'); /* IE9 Compat Modes */
-  src: local('Raleway Bold Italic'), local('Raleway-BoldItalic'),
-       url('../fonts/Raleway/raleway-v14-latin-700italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/Raleway/raleway-v14-latin-700italic.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/Raleway/raleway-v14-latin-700italic.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/Raleway/raleway-v14-latin-700italic.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/Raleway/raleway-v14-latin-700italic.svg#Raleway') format('svg'); /* Legacy iOS */
+	font-family: 'Raleway';
+	font-style: italic;
+	font-weight: 700;
+	src: url('../fonts/Raleway/raleway-v14-latin-700italic.eot'); /* IE9 Compat Modes */
+	src: local('Raleway Bold Italic'), local('Raleway-BoldItalic'),
+			 url('../fonts/Raleway/raleway-v14-latin-700italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+			 url('../fonts/Raleway/raleway-v14-latin-700italic.woff2') format('woff2'), /* Super Modern Browsers */
+			 url('../fonts/Raleway/raleway-v14-latin-700italic.woff') format('woff'), /* Modern Browsers */
+			 url('../fonts/Raleway/raleway-v14-latin-700italic.ttf') format('truetype'), /* Safari, Android, iOS */
+			 url('../fonts/Raleway/raleway-v14-latin-700italic.svg#Raleway') format('svg'); /* Legacy iOS */
 }
 
 /* General ------------------------------------------------------------------ */
@@ -236,10 +236,6 @@ div#pulldown-menu {
 	background-color: #f1d40f !important;
 }
 
-.wy-alert.wy-alert-success, .rst-content .wy-alert-success.note, .rst-content .wy-alert-success.attention, .rst-content .wy-alert-success.caution, .rst-content .wy-alert-success.danger, .rst-content .wy-alert-success.error, .rst-content .hint, .rst-content .important, .rst-content .tip, .rst-content .wy-alert-success.warning, .rst-content .wy-alert-success.seealso, .rst-content .wy-alert-success.admonition-todo {
-	background: rgba(0,0,0,0.05);
-}
-
 /* override table width restrictions */
 .wy-table-responsive table td, .wy-table-responsive table th {
 	white-space: normal;
@@ -276,16 +272,28 @@ div#pulldown-menu {
 
 /* Messages ----------------------------------------------------------------- */
 
-.wy-alert.wy-alert-success .wy-alert-title, .rst-content .wy-alert-success.note .wy-alert-title, .rst-content .wy-alert-success.attention .wy-alert-title, .rst-content .wy-alert-success.caution .wy-alert-title, .rst-content .wy-alert-success.danger .wy-alert-title, .rst-content .wy-alert-success.error .wy-alert-title, .rst-content .hint .wy-alert-title, .rst-content .important .wy-alert-title, .rst-content .tip .wy-alert-title, .rst-content .wy-alert-success.warning .wy-alert-title, .rst-content .wy-alert-success.seealso .wy-alert-title, .rst-content .wy-alert-success.admonition-todo .wy-alert-title, .wy-alert.wy-alert-success .rst-content .admonition-title, .rst-content .wy-alert.wy-alert-success .admonition-title, .rst-content .wy-alert-success.note .admonition-title, .rst-content .wy-alert-success.attention .admonition-title, .rst-content .wy-alert-success.caution .admonition-title, .rst-content .wy-alert-success.danger .admonition-title, .rst-content .wy-alert-success.error .admonition-title, .rst-content .hint .admonition-title, .rst-content .important .admonition-title, .rst-content .tip .admonition-title, .rst-content .wy-alert-success.warning .admonition-title, .rst-content .wy-alert-success.seealso .admonition-title, .rst-content .wy-alert-success.admonition-todo .admonition-title {
-	background-color: #dd4814;
+.rst-content .success {
+	background: #dff0d8;
 }
 
-.wy-alert.wy-alert-info .wy-alert-title, .rst-content .note .wy-alert-title, .rst-content .wy-alert-info.attention .wy-alert-title, .rst-content .wy-alert-info.caution .wy-alert-title, .rst-content .wy-alert-info.danger .wy-alert-title, .rst-content .wy-alert-info.error .wy-alert-title, .rst-content .wy-alert-info.hint .wy-alert-title, .rst-content .wy-alert-info.important .wy-alert-title, .rst-content .wy-alert-info.tip .wy-alert-title, .rst-content .wy-alert-info.warning .wy-alert-title, .rst-content .seealso .wy-alert-title, .rst-content .wy-alert-info.admonition-todo .wy-alert-title, .rst-content .wy-alert-info.admonition .wy-alert-title, .wy-alert.wy-alert-info .rst-content .admonition-title, .rst-content .wy-alert.wy-alert-info .admonition-title, .rst-content .note .admonition-title, .rst-content .wy-alert-info.attention .admonition-title, .rst-content .wy-alert-info.caution .admonition-title, .rst-content .wy-alert-info.danger .admonition-title, .rst-content .wy-alert-info.error .admonition-title, .rst-content .wy-alert-info.hint .admonition-title, .rst-content .wy-alert-info.important .admonition-title, .rst-content .wy-alert-info.tip .admonition-title, .rst-content .wy-alert-info.warning .admonition-title, .rst-content .seealso .admonition-title, .rst-content .wy-alert-info.admonition-todo .admonition-title, .rst-content .wy-alert-info.admonition .admonition-title {
-    background: #5bc0de;
+.rst-content .success .admonition-title {
+	background-color: #9ace25;
 }
 
-.wy-alert.wy-alert-info, .rst-content .note, .rst-content .wy-alert-info.attention, .rst-content .wy-alert-info.caution, .rst-content .wy-alert-info.danger, .rst-content .wy-alert-info.error, .rst-content .wy-alert-info.hint, .rst-content .wy-alert-info.important, .rst-content .wy-alert-info.tip, .rst-content .wy-alert-info.warning, .rst-content .seealso, .rst-content .wy-alert-info.admonition-todo, .rst-content .wy-alert-info.admonition {
-    background: #d8eaf0;
+.rst-content .info {
+	background: #e8eff1;
+}
+
+.rst-content .info .admonition-title {
+	background: #5bc0de;
+}
+
+.rst-content .important {
+	background: #f9f3f3;
+}
+
+.rst-content .important .admonition-title {
+	background: #dd4814;
 }
 
 /* Footer ------------------------------------------------------------------- */
